--- a/examples/create-react-app/src/index.css
+++ b/examples/create-react-app/src/index.css
@@ -4,3 +4,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
+
+h1 {
+  display: inline-block;
+  color: #4abdac;
+  white-space: nowrap;
+}
